--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -1,29 +1,26 @@
-spec:
-  name: static-site-agent
-  region: nyc
-  services:
-    - name: web
-      dockerfile_path: Dockerfile
-      source_dir: /
-      github:
-        repo: digitalocean/static-site-agent
-        branch: main
-        deploy_on_push: true
-      http_port: 5000
-      instance_count: 1
-      instance_size_slug: basic-xxs
-      routes:
-        - path: /
-      envs:
-        - key: OPENAI_API_KEY
-          scope: RUN_TIME
-          type: SECRET
-        - key: DO_GRADIENT_API_KEY
-          scope: RUN_TIME
-          type: SECRET
-        - key: DIGITALOCEAN_API_KEY
-          scope: RUN_TIME
-          type: SECRET
-        - key: PYTHONUNBUFFERED
-          scope: RUN_TIME
-          value: "1"
+name: static-site-agent
+region: nyc
+services:
+  - name: web
+    image: docker.io/YOUR_DOCKERHUB_USERNAME/static-site-agent:latest
+    http_port: 5000
+    instance_count: 1
+    instance_size_slug: basic-xxs
+    routes:
+      - path: /
+    envs:
+      - key: OPENAI_API_KEY
+        scope: RUN_TIME
+        type: SECRET
+      - key: DO_GRADIENT_API_KEY
+        scope: RUN_TIME
+        type: SECRET
+      - key: SPACES_ACCESS_KEY_ID
+        scope: RUN_TIME
+        type: SECRET
+      - key: SPACES_SECRET_ACCESS_KEY
+        scope: RUN_TIME
+        type: SECRET
+      - key: PYTHONUNBUFFERED
+        scope: RUN_TIME
+        value: "1"
